--- a/src/bicicletas.html
+++ b/src/bicicletas.html
@@ -2,21 +2,25 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Bicicletas | Bikcraft</title>
-    <meta name="description" content="Bicicletas">
+    <meta name="description" content="Bicicletas" />
 
-    <link rel="preload" href="./css/style.css" as="style">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.css" as="style" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script>
+        document.documentElement.classList.add("js");
+    </script>
 </head>
 
 <body id="bicicletas">
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="">
+                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -38,34 +42,39 @@
         <div class="titulo-bg">
             <div class="titulo container">
                 <p class="font-2-l-b cor-5">Escolha a melhor para você</p>
-                <h1 class="font-1-xxl cor-0">nossas bicicletas<span class="cor-p1">.</span></h1>
+                <h1 class="font-1-xxl cor-0">
+                    nossas bicicletas<span class="cor-p1">.</span>
+                </h1>
             </div>
         </div>
 
         <div class="bicicletas container">
             <div class="bicicletas-imagem">
-                <img src="../public/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                <img src="../public/img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
                 <span class="font-2-m cor-0">R$ 4999</span>
             </div>
             <div class="bicicletas-conteudo">
                 <h2 class="font-1-xl">Nimbus Stark</h2>
-                <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
-                    equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <p class="font-2-s cor-8">
+                    A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+                    vem equipada com os melhores acessórios, o que garante maior
+                    velocidade.
+                </p>
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="../public/img/icones/eletrica.svg" alt="">
+                        <img src="../public/img/icones/eletrica.svg" alt="" />
                         Motor Elétrico
                     </li>
                     <li>
-                        <img src="../public/img/icones/carbono.svg" alt="">
+                        <img src="../public/img/icones/carbono.svg" alt="" />
                         Fibra de Carbono
                     </li>
                     <li>
-                        <img src="../public/img/icones/velocidade.svg" alt="">
+                        <img src="../public/img/icones/velocidade.svg" alt="" />
                         50 km/h
                     </li>
                     <li>
-                        <img src="../public/img/icones/rastreador.svg" alt="">
+                        <img src="../public/img/icones/rastreador.svg" alt="" />
                         Rastreador
                     </li>
                 </ul>
@@ -76,28 +85,31 @@
         <div class="bicicletas-bg">
             <div class="bicicletas container">
                 <div class="bicicletas-imagem">
-                    <img src="../public/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+                    <img src="../public/img/bicicletas/magic.jpg" alt="Bicicleta preta" />
                     <span class="font-2-m cor-0">R$ 2499</span>
                 </div>
                 <div class="bicicletas-conteudo">
                     <h2 class="font-1-xl cor-0">Magic Might</h2>
-                    <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem
-                        equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <p class="font-2-s cor-5">
+                        A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela
+                        vem equipada com os melhores acessórios, o que garante maior
+                        velocidade.
+                    </p>
                     <ul class="font-1-m cor-5">
                         <li>
-                            <img src="../public/img/icones/eletrica.svg" alt="">
+                            <img src="../public/img/icones/eletrica.svg" alt="" />
                             Motor Elétrico
                         </li>
                         <li>
-                            <img src="../public/img/icones/carbono.svg" alt="">
+                            <img src="../public/img/icones/carbono.svg" alt="" />
                             Fibra de Carbono
                         </li>
                         <li>
-                            <img src="../public/img/icones/velocidade.svg" alt="">
+                            <img src="../public/img/icones/velocidade.svg" alt="" />
                             45 km/h
                         </li>
                         <li>
-                            <img src="../public/img/icones/rastreador.svg" alt="">
+                            <img src="../public/img/icones/rastreador.svg" alt="" />
                             Rastreador
                         </li>
                     </ul>
@@ -108,54 +120,60 @@
 
         <div class="bicicletas container">
             <div class="bicicletas-imagem">
-                <img src="../public/img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+                <img src="../public/img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
                 <span class="font-2-m cor-0">R$ 3999</span>
             </div>
             <div class="bicicletas-conteudo">
                 <h2 class="font-1-xl">Nebula Cosmic</h2>
-                <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
-                    equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <p class="font-2-s cor-8">
+                    A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela
+                    vem equipada com os melhores acessórios, o que garante maior
+                    velocidade.
+                </p>
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="../public/img/icones/eletrica.svg" alt="">
+                        <img src="../public/img/icones/eletrica.svg" alt="" />
                         Motor Elétrico
                     </li>
                     <li>
-                        <img src="../public/img/icones/carbono.svg" alt="">
+                        <img src="../public/img/icones/carbono.svg" alt="" />
                         Fibra de Carbono
                     </li>
                     <li>
-                        <img src="../public/img/icones/velocidade.svg" alt="">
+                        <img src="../public/img/icones/velocidade.svg" alt="" />
                         50 km/h
                     </li>
                     <li>
-                        <img src="../public/img/icones/rastreador.svg" alt="">
+                        <img src="../public/img/icones/rastreador.svg" alt="" />
                         Rastreador
                     </li>
                 </ul>
                 <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
             </div>
         </div>
-
     </main>
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft">
+            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
-                    <li> <a href="tel:+551199999999">+55 11 9999-9999</a></li>
-                    <li> <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+                    <li><a href="tel:+551199999999">+55 11 9999-9999</a></li>
+                    <li>
+                        <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a>
+                    </li>
                     <li>Rua Ali Perto, 42 - Paulista</li>
                     <li>São Paulo - SP</li>
                 </ul>
                 <div class="footer-redes">
-                    <a href="#"> <img src="../public/img/redes/instagram.svg" alt="instagram"></a>
-                    <a href="#"> <img src="../public/img/redes/facebook.svg" alt="facebook"></a>
-                    <a href="#"> <img src="../public/img/redes/youtube.svg" alt="youtube"></a>
+                    <a href="#">
+                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                    <a href="#">
+                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                    <a href="#">
+                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
-
             </div>
 
             <div class="footer-informacoes">
@@ -177,10 +195,11 @@
                         </li>
                     </ul>
                 </nav>
-
             </div>
 
-            <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
+            <p class="font-2-m cor-6 footer-copy">
+                Bikcraft © Alguns direitos reservados.
+            </p>
         </div>
     </footer>
     <script src="./js/script.js"></script>
