--- a/src/contato.html
+++ b/src/contato.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet" />
+    <script>
+        document.documentElement.classList.add("js");
+    </script>
 </head>
 
 <body id="contato">
@@ -102,7 +105,7 @@
         <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
         <div class="lojas-item">
             <img src="../public/img/lojas/rj.jpg"
-                alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+                alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ" />
             <div class="lojas-conteudo">
                 <h3 class="font-1-xl">Rio de Janeiro</h3>
                 <div class="lojas-dados font-2-s cor-8">
@@ -113,13 +116,16 @@
                     <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
                     <a href="tel:+552199999999">+55 21 9999-9999</a>
                 </div>
-                <p class="lojas-tempo font-1-s"><img src="../public/img/icones/horario.svg" alt="">08-18h de seg à dom
+                <p class="lojas-tempo font-1-s">
+                    <img src="../public/img/icones/horario.svg" alt="" />08-18h de seg à
+                    dom
                 </p>
             </div>
         </div>
 
         <div class="lojas-item">
-            <img src="../public/img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+            <img src="../public/img/lojas/sp.jpg"
+                alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP" />
             <div class="lojas-conteudo">
                 <h3 class="font-1-xl">São Paulo</h3>
                 <div class="lojas-dados font-2-s cor-8">
@@ -130,7 +136,9 @@
                     <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
                     <a href="tel:+551199999999">+55 11 9999-9999</a>
                 </div>
-                <p class="lojas-tempo font-1-s"><img src="../public/img/icones/horario.svg" alt="">08-18h de seg à dom
+                <p class="lojas-tempo font-1-s">
+                    <img src="../public/img/icones/horario.svg" alt="" />08-18h de seg à
+                    dom
                 </p>
             </div>
         </div>
