--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,33 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Bicicletas Elétricas</title>
     <meta name="description"
-        content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+        content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft." />
 
-    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.css" as="style" />
+    <link rel="stylesheet" href="./css/style.css" />
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet" />
 
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
+    <script>
+        document.documentElement.classList.add("js");
+    </script>
 </head>
 
 <body>
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="">
+                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -48,43 +49,47 @@
     <main class="introducao-bg">
         <div class="introducao container">
             <div class="introducao-conteudo">
-                <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-5">
-                    Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na
-                    sua
-                    velocidade com a Bikcraft.
+                <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">
+                    Bicicletas feitas sob medida<span class="cor-p1">.</span>
+                </h1>
+                <p class="font-2-l cor-5 fadeInDown" data-anime="400">
+                    Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+                    para você. Explore o mundo na sua velocidade com a Bikcraft.
                 </p>
-                <a class="botao" href="./bicicletas.html">Escolha a sua </a>
+                <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua
+                </a>
             </div>
-            <picture>
-                <source media="(max-width: 800px)" srcset="../public/img/bicicletas/nimbus.jpg">
+            <picture class="fadeInDown" data-anime="800">
+                <source media="(max-width: 800px)" srcset="../public/img/bicicletas/nimbus.jpg" />
                 <img src="../public/img/fotos/introducao.jpg" width="1280" height="1600"
-                    alt="Bicicleta elétrica preta.">
+                    alt="Bicicleta elétrica preta." />
             </picture>
         </div>
     </main>
 
     <article class="bicicletas-lista">
-        <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+        <h2 class="container font-1-xxl">
+            escolha a sua<span class="cor-p1">.</span>
+        </h2>
         <ul>
             <li>
                 <a href="./bicicletas/magic.html">
-                    <img src="../public/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                    <img src="../public/img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nimbus.html">
-                    <img src="../public/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                    <img src="../public/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
                     <h3 class="font-1-xl">Nimbus Stark</h3>
                     <span class="font-2-m cor-8">R$ 4999</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nebula.html">
-                    <img src="../public/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
-                    <h3 class="font-1-xl">Nebula Cosmic </h3>
+                    <img src="../public/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
             </li>
@@ -95,70 +100,78 @@
         <div class="tecnologia container">
             <div class="tecnologia-conteudo">
                 <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
-                <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
-                <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para
-                    o seu corpo e altura,
-                    garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente
-                    as suas cores.</p>
+                <h2 class="font-1-xxl cor-0">
+                    Você escolhe as suas cores e componentes<span class="cor-p1">.</span>
+                </h2>
+                <p class="font-2-l cor-5">
+                    Cada Bikcraft é única e possui a sua identidade. As medidas serão
+                    exatas para o seu corpo e altura, garantindo maior conforto e
+                    ergonomia na sua pedalada. Você pode também personalizar
+                    completamente as suas cores.
+                </p>
 
                 <a class="link" href="../src/bicicletas.html">Escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
-                        <img src="../public/img/icones/eletrica.svg" alt="">
+                        <img src="../public/img/icones/eletrica.svg" alt="" />
                         <h3 class="font-1-m cor-0">Motor Eletrico</h3>
-                        <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de
-                            até
-                            120h. A bateria é
-                            recarregada com a sua energia gasta ao pedalar.
-                        <p>
+                        <p class="font-2-s cor-5">
+                            Toda Bikcraft é equipada com um motor elétrico que possui
+                            duração de até 120h. A bateria é recarregada com a sua energia
+                            gasta ao pedalar.
+                        </p>
+
+                        <p></p>
                     </div>
 
                     <div>
-                        <img src="../public/img/icones/rastreador.svg" alt="">
+                        <img src="../public/img/icones/rastreador.svg" alt="" />
                         <h3 class="font-1-m cor-0">Rastreador</h3>
-                        <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
-                            rastreadores e sistemas anti-furto
-                            para garantir o seu sossego.</p>
+                        <p class="font-2-s cor-5">
+                            Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
+                            rastreadores e sistemas anti-furto para garantir o seu sossego.
+                        </p>
                     </div>
                 </div>
             </div>
 
             <div class="tecnologia-imagem">
-                <img src="../public/img/fotos/tecnologia.jpg" alt="">
+                <img src="../public/img/fotos/tecnologia.jpg" alt="" />
             </div>
         </div>
-
     </article>
 
     <section class="parceiros" aria-label="Nossos parceiros">
-        <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
+        <h2 class="container font-1-xxl">
+            nossos parceiros<span class="cor-p1">.</span>
+        </h2>
 
         <ul>
-
-            <li> <img src="../public/img/parceiros/caravan.svg" alt="caravan"> </li>
-            <li><img src="../public/img/parceiros/ranek.svg" alt="ranek"> </li>
-            <li> <img src="../public/img/parceiros/handel.svg" alt="handel"> </li>
-            <li> <img src="../public/img/parceiros/dogs.svg" alt="dogs"> </li>
-            <li> <img src="../public/img/parceiros/lescone.svg" alt="lescone"> </li>
-            <li><img src="../public/img/parceiros/flexblog.svg" alt="flexblog"> </li>
-            <li><img src="../public/img/parceiros/wildbeast.svg" alt="wildbeast"> </li>
-            <li><img src="../public/img/parceiros/surfbot.svg" alt="surfbot"> </li>
-
-
+            <li><img src="../public/img/parceiros/caravan.svg" alt="caravan" /></li>
+            <li><img src="../public/img/parceiros/ranek.svg" alt="ranek" /></li>
+            <li><img src="../public/img/parceiros/handel.svg" alt="handel" /></li>
+            <li><img src="../public/img/parceiros/dogs.svg" alt="dogs" /></li>
+            <li><img src="../public/img/parceiros/lescone.svg" alt="lescone" /></li>
+            <li>
+                <img src="../public/img/parceiros/flexblog.svg" alt="flexblog" />
+            </li>
+            <li>
+                <img src="../public/img/parceiros/wildbeast.svg" alt="wildbeast" />
+            </li>
+            <li><img src="../public/img/parceiros/surfbot.svg" alt="surfbot" /></li>
         </ul>
     </section>
 
     <section class="depoimento" aria-label="depoimento">
         <div>
-            <img src="../public/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecraft">
-
-
+            <img src="../public/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecraft" />
         </div>
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cor-p5">
                 <p>
-                    Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por
-                    esta atividade. Recomendo à todos que amo.
+                    Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
+                    foi intensificar o meu amor por esta atividade. Recomendo à todos
+                    que amo.
                 </p>
             </blockquote>
             <span class="font-1-m-b cor-p4">Ana Júlia</span>
@@ -168,7 +181,6 @@
     <article class="seguros-bg">
         <div class="seguros container">
             <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
-
 
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-6">PRATA</h3>
@@ -181,7 +193,6 @@
                 </ul>
                 <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
             </div>
-
 
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -201,21 +212,25 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft">
+            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
-                    <li> <a href="tel:+551199999999">+55 11 9999-9999</a></li>
-                    <li> <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+                    <li><a href="tel:+551199999999">+55 11 9999-9999</a></li>
+                    <li>
+                        <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a>
+                    </li>
                     <li>Rua Ali Perto, 42 - Paulista</li>
                     <li>São Paulo - SP</li>
                 </ul>
                 <div class="footer-redes">
-                    <a href="#"> <img src="../public/img/redes/instagram.svg" alt="instagram"></a>
-                    <a href="#"> <img src="../public/img/redes/facebook.svg" alt="facebook"></a>
-                    <a href="#"> <img src="../public/img/redes/youtube.svg" alt="youtube"></a>
+                    <a href="#">
+                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                    <a href="#">
+                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                    <a href="#">
+                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
-
             </div>
 
             <div class="footer-informacoes">
@@ -237,16 +252,16 @@
                         </li>
                     </ul>
                 </nav>
-
             </div>
 
-            <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
+            <p class="font-2-m cor-6 footer-copy">
+                Bikcraft © Alguns direitos reservados.
+            </p>
         </div>
     </footer>
 
-    <script src="./js/plugins/simple-anime.js"></script>;
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
-
 </body>
 
 </html>
